fix slide images not centering on mobile

--- a/src/components/Slides.css
+++ b/src/components/Slides.css
@@ -1,10 +1,6 @@
 .slides {
   position: relative;
-  width: 337.5px;
-  height: 369px;
-  /* overflow: hidden; */
-  /* padding-bottom: 110%; */
-  
+  height: 100vw;
 }
 
 .slides > .slide {
